# resilient-AI

./: main.py  pyproject.toml
app/agent/: agent.py  executor.py  router.py
app/llm/: groq_client.py
app/prompts/: router_prompt.py
app/tools/: calculator.py  registry.py  search.py
